[gd_scene load_steps=32 format=3 uid="uid://dsv5ysavjorvu"]

[ext_resource type="Script" path="res://ghost/ghost.gd" id="1_0gav5"]
[ext_resource type="Texture2D" uid="uid://dgms458m2xvdx" path="res://assets/ghost.png" id="2_pcfyu"]
[ext_resource type="Script" path="res://state_machine.gd" id="3_c1cy2"]
[ext_resource type="Script" path="res://ghost/states/ghost_idle_state.gd" id="4_4gtyt"]
[ext_resource type="Script" path="res://ghost/states/ghost_defeated_state.gd" id="5_db2bg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mm71m"]
atlas = ExtResource("2_pcfyu")
region = Rect2(0, 90, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_40mgd"]
atlas = ExtResource("2_pcfyu")
region = Rect2(90, 90, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_iroea"]
atlas = ExtResource("2_pcfyu")
region = Rect2(180, 90, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_cx66u"]
atlas = ExtResource("2_pcfyu")
region = Rect2(270, 90, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2p78"]
atlas = ExtResource("2_pcfyu")
region = Rect2(360, 90, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_rg7ty"]
atlas = ExtResource("2_pcfyu")
region = Rect2(450, 90, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fxvk"]
atlas = ExtResource("2_pcfyu")
region = Rect2(0, 180, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wlir"]
atlas = ExtResource("2_pcfyu")
region = Rect2(90, 180, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_oe18w"]
atlas = ExtResource("2_pcfyu")
region = Rect2(180, 180, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_145f7"]
atlas = ExtResource("2_pcfyu")
region = Rect2(270, 180, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfmo4"]
atlas = ExtResource("2_pcfyu")
region = Rect2(360, 180, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_018dp"]
atlas = ExtResource("2_pcfyu")
region = Rect2(450, 180, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1xu8"]
atlas = ExtResource("2_pcfyu")
region = Rect2(540, 180, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_61nve"]
atlas = ExtResource("2_pcfyu")
region = Rect2(540, 90, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_ye81x"]
atlas = ExtResource("2_pcfyu")
region = Rect2(0, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_viiki"]
atlas = ExtResource("2_pcfyu")
region = Rect2(90, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1hmy"]
atlas = ExtResource("2_pcfyu")
region = Rect2(180, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_xs268"]
atlas = ExtResource("2_pcfyu")
region = Rect2(270, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_16lj5"]
atlas = ExtResource("2_pcfyu")
region = Rect2(360, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_epxqe"]
atlas = ExtResource("2_pcfyu")
region = Rect2(450, 0, 90, 90)

[sub_resource type="SpriteFrames" id="SpriteFrames_s3ra1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mm71m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40mgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iroea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cx66u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2p78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rg7ty")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fxvk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wlir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oe18w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_145f7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfmo4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_018dp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1xu8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61nve")
}],
"loop": false,
"name": &"defeated",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ye81x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_viiki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1hmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xs268")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_16lj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epxqe")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_rxtsd"]
resource_name = "hurt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.1, 0.266667, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0.576471), Color(1, 1, 1, 1), Color(1, 0.32549, 0.258824, 0.494118), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_a8lwj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jw08r"]
_data = {
"RESET": SubResource("Animation_a8lwj"),
"hurt": SubResource("Animation_rxtsd")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6trs1"]
radius = 12.0
height = 56.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ecixf"]
radius = 108.0

[node name="Ghost" type="RigidBody2D" node_paths=PackedStringArray("idle_state", "defeated_state")]
y_sort_enabled = true
mass = 0.251
lock_rotation = true
linear_damp = 10.539
script = ExtResource("1_0gav5")
idle_state = NodePath("StateMachine/GhostIdleState")
defeated_state = NodePath("StateMachine/GhostDefeatedState")
health = 20

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -35)
sprite_frames = SubResource("SpriteFrames_s3ra1")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.205981

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_jw08r")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -22)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_6trs1")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
unique_name_in_owner = true
script = ExtResource("3_c1cy2")
initial_state = NodePath("GhostIdleState")

[node name="GhostIdleState" type="Node" parent="StateMachine" node_paths=PackedStringArray("defeated_state", "ghost")]
script = ExtResource("4_4gtyt")
defeated_state = NodePath("../GhostDefeatedState")
ghost = NodePath("../..")

[node name="GhostDefeatedState" type="Node" parent="StateMachine" node_paths=PackedStringArray("ghost")]
script = ExtResource("5_db2bg")
ghost = NodePath("../..")

[node name="ChaseArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaseArea"]
position = Vector2(0, -38)
shape = SubResource("CircleShape2D_ecixf")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
